--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@heroicons/react": "^2.1.3",
     "@hugeicons/react-pro": "^0.2.5",
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.32.1",
+    "@tanstack/react-query-devtools": "^5.32.1",
     "@uploadthing/react": "^6.4.4",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
@@ -31,6 +34,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
