--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "prisma": "^5.12.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^6.1.6",
+    "swiper": "^11.1.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
