--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.10.2",
     "react-loader-spinner": "^6.1.6",
     "swiper": "^11.1.3",
     "tailwind-merge": "^2.2.2",
